small fix, for now, for /all displaying nice on small screens and yarn up

--- a/src/css/grid.css
+++ b/src/css/grid.css
@@ -17,6 +17,7 @@
 .content {
   margin-left: 10vw;
   margin-right: 10vw;
+  overflow: hidden;
 }
 .header,
 .footer {
@@ -28,6 +29,7 @@
   .header, .footer {
     margin-left: 1vw;
     margin-right: 1vw;
+    overflow: scroll;
   }
   .content {
     margin-left: 2vw;
@@ -84,7 +86,7 @@ body {
 
 .index-markdown {
   background-color: white;
-  overflow-y: hidden;
+  overflow-y: scroll;
   & p, & h4 {
     margin-left: var(--x2);
     margin-right: var(--x2);}
@@ -94,7 +96,7 @@ body {
     display: block;
     background-color: var(--blue9);
     border: .0625rem solid var(--gray8);
-    overflow-y: hidden;
+    overflow-y: scroll;
   }
   
   & pre code {
@@ -108,6 +110,18 @@ body {
     word-wrap: normal;
   }
 
+  & code {  /* still used? */
+    white-space: pre;
+    background: var(--blue0);
+    border: 0.0625rem  transparent;
+    border-top-left-radius: .125rem;
+    border-top-right-radius: .125rem;
+    display: inline;
+    font-family: var(--monospace);
+    max-width: 100%;
+    overflow: auto;
+    padding: 0 0.25rem; /* last 0 to ensure we get a link boarder showing*/
+  }
   & ul {
     list-style-type: none;
     line-height: 1.33;
